fix broken style

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -34,11 +34,11 @@ h4 {
   background-color: rgba(255, 255, 255, 0.04);
 }
 
-article a:hover {
+article.post-single a:hover {
   background-color: rgba(0, 100, 255, 0.1);
 }
 
-.dark article a:hover {
+.dark article.post-single a:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
